fix card text align

--- a/mi-ui/src/components/SharedComponents/BaseProfileCard/style.module.scss
+++ b/mi-ui/src/components/SharedComponents/BaseProfileCard/style.module.scss
@@ -55,6 +55,7 @@
   .rankedStat {
     grid-column: 3;
     grid-row: 1;
+    text-align: left;
   }
 
   .flag {
